environmental select all

--- a/StoreMVC/appsettings.json
+++ b/StoreMVC/appsettings.json
@@ -1,7 +1,7 @@
 {
   "StoreMVCConfiguration": {
     "Database": {
-      // "ConnectionString": -SEE ENVIRONMENT VARIABLES-
+      //"ConnectionString": "Data Source=DESKTOP-QPNB9M4\\SQLEXPRESS;Initial Catalog=store;Integrated Security=True"
     }
   },
 
