--- a/StoreMVC/appsettings.json
+++ b/StoreMVC/appsettings.json
@@ -1,7 +1,7 @@
 {
   "StoreMVCConfiguration": {
     "Database": {
-      //"ConnectionString": "Data Source=DESKTOP-QPNB9M4\\SQLEXPRESS;Initial Catalog=store;Integrated Security=True"
+      //"ConnectionString": -STORED IN SECRETS-
     }
   },
 
